name: dss
version: 0.0.0.0
author: Kaiko Kaur
maintainer: kaiko.kaur@gmail.com
description: CSS-is rules to write API based on SQL

category: Database
build-type: Simple

cabal-version: >= 1.8

executable dss
  main-is: dss.hs
  ghc-options: -threaded -O2
  build-depends:
     base >=4.6, bytestring >=0.10, deepseq, process, text, parsec, unordered-containers, resourcet,
     mtl, transformers, MissingH, split, filepath,
     containers, hashmap, hashable, attoparsec >=0.11, vector >=0.10.9, convertible,
     time, unix, directory, filepath, base64-bytestring, pureMD5, utf8-string, case-insensitive, aeson >=0.7,
     ZDBC, ZDBC-sqlite3, resource-pool, scientific,
     HTTP, http-types, network, network-uri, wai >=3.0, wai-extra >=3.0, warp >=3.0, cookie, blaze-builder,
     old-locale

